--- a/SimplSharpNetUtils/bin/SimplSharpNetUtils.config
+++ b/SimplSharpNetUtils/bin/SimplSharpNetUtils.config
@@ -10,7 +10,7 @@
     <ArchiveName />
   </RequiredInfo>
   <OptionalInfo>
-    <CompiledOn>3/9/2017 11:00:00 PM</CompiledOn>
-    <CompilerRev>1.0.0.41398</CompilerRev>
+    <CompiledOn>3/13/2017 11:26:08 AM</CompiledOn>
+    <CompilerRev>1.0.0.18782</CompilerRev>
   </OptionalInfo>
 </ProgramInfo>
