DEBUG compiler directives
Enclosed all CrestronConsole.PrintLine statements into #if DEBUG
compiler directives.

--- a/SimplSharpNetUtils/bin/SimplSharpNetUtils.config
+++ b/SimplSharpNetUtils/bin/SimplSharpNetUtils.config
@@ -10,7 +10,7 @@
     <ArchiveName />
   </RequiredInfo>
   <OptionalInfo>
-    <CompiledOn>3/13/2017 11:27:37 AM</CompiledOn>
-    <CompilerRev>1.0.0.18828</CompilerRev>
+    <CompiledOn>3/13/2017 9:38:55 PM</CompiledOn>
+    <CompilerRev>1.0.0.37166</CompilerRev>
   </OptionalInfo>
 </ProgramInfo>
