--- a/SimplSharpNetUtils/SimplSharpNetUtils.csproj
+++ b/SimplSharpNetUtils/SimplSharpNetUtils.csproj
@@ -78,7 +78,7 @@
         <Programmer />
         <ArchiveFilename>C:\repos\SimplSharpNetUtils\SimplSharpNetUtils\bin\SimplSharpNetUtils.clz</ArchiveFilename>
         <MinFirmwareVersion>1.007.0017</MinFirmwareVersion>
-        <CompiledOn>3/13/2017 9:38:55 PM</CompiledOn>
+        <CompiledOn>4/4/2017 9:56:01 AM</CompiledOn>
         <AdditionalInfo />
         <EmbedSourceArchive>False</EmbedSourceArchive>
         <CopyTo>
