--- a/SimplSharpNetUtils/bin/SimplSharpNetUtils.config
+++ b/SimplSharpNetUtils/bin/SimplSharpNetUtils.config
@@ -10,7 +10,7 @@
     <ArchiveName />
   </RequiredInfo>
   <OptionalInfo>
-    <CompiledOn>3/13/2017 9:38:55 PM</CompiledOn>
-    <CompilerRev>1.0.0.37166</CompilerRev>
+    <CompiledOn>4/4/2017 9:56:01 AM</CompiledOn>
+    <CompilerRev>1.0.0.16080</CompilerRev>
   </OptionalInfo>
 </ProgramInfo>
