Removed many debug statements

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.sm2
 *.sig
 SimplSharpNetUtils/SimplPlus/SPlsWork/
-SimplSharpNetUtils/obj/
-SimplSharpNetUtils/bin/
+SimplSharpNetUtils/obj/*
+SimplSharpNetUtils/bin/*
 SimplSharpNetUtils_Source.zip
+*.clz
